// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cloud.financialservices.v1;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/type/datetime.proto";
import "google/type/interval.proto";

option go_package = "cloud.google.com/go/financialservices/apiv1/financialservicespb;financialservicespb";
option java_multiple_files = true;
option java_outer_classname = "DatasetProto";
option java_package = "com.google.cloud.financialservices.v1";

// The Dataset resource contains summary information about a dataset.
message Dataset {
  option (google.api.resource) = {
    type: "financialservices.googleapis.com/Dataset"
    pattern: "projects/{project_num}/locations/{location}/instances/{instance}/datasets/{dataset}"
  };

  // The possible states of a resource.
  enum State {
    // State is unspecified, should not occur.
    STATE_UNSPECIFIED = 0;

    // The resource has not finished being created.
    CREATING = 1;

    // The resource is active/ready to be used.
    ACTIVE = 2;

    // The resource is in the process of being updated.
    UPDATING = 3;

    // The resource is in the process of being deleted.
    DELETING = 4;
  }

  // Output only. The resource name of the Dataset.
  // format:
  // "/projects/{project_num}/locations/{location}/instances/{instance}/datasets/{dataset}"
  string name = 1 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. The timestamp of creation of this resource.
  google.protobuf.Timestamp create_time = 2
      [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. The timestamp of the most recent update of this resource.
  google.protobuf.Timestamp update_time = 3
      [(google.api.field_behavior) = OUTPUT_ONLY];

  // Labels
  map<string, string> labels = 4;

  // Required. The set of BigQuery tables in the dataset.  The key should be the
  // table type and the value should be the BigQuery tables in the format
  // `bq://{project}.{dataset}.{table}`.
  // Current table types are:
  //
  //   * `party`
  //   * `account_party_link`
  //   * `transaction`
  //   * `risk_case_event`
  //   * `party_supplementary_data`
  map<string, string> table_specs = 5 [(google.api.field_behavior) = REQUIRED];

  // Output only. State of the dataset (creating, active, deleting, etc.)
  State state = 7 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Required. Core time window of the dataset. All tables should have complete
  // data covering this period.
  google.type.Interval date_range = 8 [(google.api.field_behavior) = REQUIRED];

  // The timezone of the data, default will act as UTC.
  google.type.TimeZone time_zone = 9;
}

// Request for retrieving a paginated list of Dataset resources that meet the
// specified criteria.
message ListDatasetsRequest {
  // Required. The parent of the Dataset is the Instance.
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "financialservices.googleapis.com/Instance"
    }
  ];

  // The number of resources to be included in the response. The response
  // contains a next_page_token, which can be used to retrieve the next page of
  // resources.
  int32 page_size = 2;

  // In case of paginated results, this is the token that was returned in the
  // previous ListDatasetResponse. It should be copied here to retrieve the
  // next page of resources. Empty will give the first page of
  // ListDatasetRequest, and the last page will return an empty page_token.
  string page_token = 3;

  // Specify a filter to narrow search results.
  string filter = 4;

  // Specify a field to use for ordering.
  string order_by = 5;
}

// Response for retrieving a list of Datasets
message ListDatasetsResponse {
  // List of Dataset resources
  repeated Dataset datasets = 1;

  // This token should be passed to the next ListDatasetsRequest to retrieve
  // the next page of Datasets (empty indicates we are done).
  string next_page_token = 2;

  // Locations that could not be reached.
  repeated string unreachable = 3;
}

// Request for retrieving a specific Dataset resource.
message GetDatasetRequest {
  // Required. The resource name of the Dataset
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "financialservices.googleapis.com/Dataset"
    }
  ];
}

// Request for creating a Dataset resource.
message CreateDatasetRequest {
  // Required. The parent of the Dataset is the Instance.
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "financialservices.googleapis.com/Instance"
    }
  ];

  // Required. The resource id of the dataset
  string dataset_id = 2 [(google.api.field_behavior) = REQUIRED];

  // Required. The dataset that will be created.
  Dataset dataset = 3 [(google.api.field_behavior) = REQUIRED];

  // Optional. An optional request ID to identify requests. Specify a unique
  // request ID so that if you must retry your request, the server will know to
  // ignore the request if it has already been completed. The server will
  // guarantee that for at least 60 minutes since the first request.
  //
  // For example, consider a situation where you make an initial request and the
  // request times out. If you make the request again with the same request
  // ID, the server can check if original operation with the same request ID
  // was received, and if so, will ignore the second request. This prevents
  // clients from accidentally creating duplicate commitments.
  //
  // The request ID must be a valid UUID with the exception that zero UUID is
  // not supported (00000000-0000-0000-0000-000000000000).
  string request_id = 4 [(google.api.field_behavior) = OPTIONAL];
}

// Request for updating a Dataset
message UpdateDatasetRequest {
  // Optional. Field mask is used to specify the fields to be overwritten in the
  // Dataset resource by the update.
  // The fields specified in the update_mask are relative to the resource, not
  // the full request. A field will be overwritten if it is in the mask. If the
  // user does not provide a mask then all fields will be overwritten.
  google.protobuf.FieldMask update_mask = 1
      [(google.api.field_behavior) = OPTIONAL];

  // Required. The new value of the dataset fields that will be updated
  // according to the update_mask.
  Dataset dataset = 2 [(google.api.field_behavior) = REQUIRED];

  // Optional. An optional request ID to identify requests. Specify a unique
  // request ID so that if you must retry your request, the server will know to
  // ignore the request if it has already been completed. The server will
  // guarantee that for at least 60 minutes since the first request.
  //
  // For example, consider a situation where you make an initial request and the
  // request times out. If you make the request again with the same request
  // ID, the server can check if original operation with the same request ID
  // was received, and if so, will ignore the second request. This prevents
  // clients from accidentally creating duplicate commitments.
  //
  // The request ID must be a valid UUID with the exception that zero UUID is
  // not supported (00000000-0000-0000-0000-000000000000).
  string request_id = 3 [(google.api.field_behavior) = OPTIONAL];
}

// Request for deleting a Dataset.
message DeleteDatasetRequest {
  // Required. The resource name of the Dataset.
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "financialservices.googleapis.com/Dataset"
    }
  ];

  // Optional. An optional request ID to identify requests. Specify a unique
  // request ID so that if you must retry your request, the server will know to
  // ignore the request if it has already been completed. The server will
  // guarantee that for at least 60 minutes after the first request.
  //
  // For example, consider a situation where you make an initial request and the
  // request times out. If you make the request again with the same request
  // ID, the server can check if original operation with the same request ID
  // was received, and if so, will ignore the second request. This prevents
  // clients from accidentally creating duplicate commitments.
  //
  // The request ID must be a valid UUID with the exception that zero UUID is
  // not supported (00000000-0000-0000-0000-000000000000).
  string request_id = 2 [(google.api.field_behavior) = OPTIONAL];
}
